rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
  labels:
    app: rest
spec:
  selector:
    matchLabels:
      app: rest
  replicas: 1 # Start with a single instance
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: rest-server
        # *** IMPORTANT: REPLACE with your actual Docker image path and tag (e.g., nikithakonankirajeswararao/demucs-rest:v1) ***
        image: nikkikr16/demucs-rest:v1 
        resources:
          requests:
            cpu: 200m
            memory: 300Mi
        ports:
        - containerPort: 5000 # The port your Flask app listens on
